	time.

2025-01-13: Leagues-decontamination is now performed if the user is on the Leagues hiscores (turns out to be a much
	better way of determining if they ever played leagues than relying on them logging onto Leagues in the very few
	days between the release of V1.6 and the end of Leagues)

2025-01-13: Made it so that the file naming scheme fix sets the dates modified back to huwhat they were before

2025-01-13: Parallelized the file-moving during leagues decontamination

2025-01-13: Made HeatmapNew.estimateSize not an instance method instead of static

** UPDATE RELEASED **

TODO: LOOT_VALUE is kinda useless because it's dependent on both the amount of loot dropped by each NPCs, and the frequency at which people kill them.
	Not sure if it's possible, but an AVERAGE_LOOT_VALUE would be much more informative. However, I suppose that would be information that is already available on the wiki.

TODO: Implement memory-saving method where:
	- only heatmap metadata is loaded from disk on startup (e.g. num tiles, total value)
		- This means I'd have to re-include them in toCSV()
	- only the newly incremented tiles are kept in memory
	- on save, the rest of the heatmap is loaded from disk, the new tiles are added to it, then it is rewritten
		- this means that the working file cannot be modified meanwhile. I suppose that was always the case doe
	- on image write and data upload, the file will be reloaded too

TODO: Update world map image

TODO: Make it so that the button that opens the website includes some user-agent/referrer deets about where the user was referred from (the plugin)

TODO: Make an auto-image button for each heatmap type instead of only having the option for both Type A and Type B

TODO stretch goal: Have the heatmaps displayable in the in-game world map similarly to how Shortest Path displays them.

TODO: stretch goal: Have the heatmaps visible on the ground in-game