@@ -30,12 +30,10 @@ public class WorldHeatmapPanel extends PluginPanel {
     Map<HeatmapNew.HeatmapType, JButton> writeHeatmapImageButtons = new HashMap<>();
     Map<HeatmapNew.HeatmapType, JButton> clearHeatmapButtons = new HashMap<>();
 	Map<HeatmapNew.HeatmapType, Integer> memoryUsageEstimates = new HashMap<>();
-	private final HeatmapFileManager heatmapFileManager;
 	protected long timeOfLastMemoryEstimate = -1;
 
     public WorldHeatmapPanel(WorldHeatmapPlugin plugin) {
         this.plugin = plugin;
-		this.heatmapFileManager = new HeatmapFileManager(plugin, plugin.hiscoreManager);
         rebuild();
     }
 
@@ -284,7 +282,7 @@ public class WorldHeatmapPanel extends PluginPanel {
         // Save all heatmap data
         plugin.executor.execute(plugin::saveHeatmapsFile);
         // Write the specified heatmap image
-		File imageFile = heatmapFileManager.getNewImageFile(plugin.currentLocalAccountHash, heatmapType, heatmap.getSeasonalType());
+		File imageFile = HeatmapFileManager.getNewImageFile(plugin.currentLocalAccountHash, heatmapType, heatmap.getSeasonalType());
         plugin.executor.execute(() -> HeatmapImage.writeHeatmapImage(heatmap, imageFile, isFullMapImage, plugin.config.isBlueMapEnabled(), plugin.config.heatmapAlpha(), plugin.config.heatmapSensitivity(), plugin.config.speedMemoryTradeoff(), new WorldHeatmapPlugin.HeatmapProgressListener(plugin, heatmapType)));
     }
 
